@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/usr/bin/env zsh
 # Not really tested on a true sh-compliant shell, but it should work
 # on any modern shell.
 
@@ -8,7 +8,7 @@
 #    let /configure (and so the user) choose.
 #  * Get infos about grep and find (uncomplete).
 
-TMP=$(mktemp /tmp/config.sh.XXXXXXXX)
+TMP=$(mktemp /tmp/userland.zsh.XXXXXXXX)
 
 touch $TMP
 
@@ -57,7 +57,7 @@ tac=$(which tac)
 
 cat << EOF
 # Automaticaly generated by $(basename $0).
-# Do not edit by hand if possible, use config.sh, which can be found 
+# Do not edit by hand if possible, use $(basename $0), which can be found 
 # in pkg++'s sources directory.
 
 sed=${sed:-sed}
